--- a/.github/workflows/update-BBC-data.yml
+++ b/.github/workflows/update-BBC-data.yml
@@ -1,19 +1,18 @@
-name: Update Football Data from BBC Sport
+name: Update Standings from BBC Sport
 
 on:
   schedule:
-    # Runs every 5 minutes on match days
-    - cron: '*/5 12-23 * * *'
+    # Runs every 5 minutes on match days (adjust hours/days as needed)
+    - cron: '*/5 12-23 * * SAT,SUN'
     # Also runs once late at night to catch up
     - cron: '0 2 * * *'
-  workflow_dispatch: # Allows manual running
+  workflow_dispatch:
 
 permissions:
   contents: write
-  actions: read 
 
 jobs:
-  scrape-and-process:
+  scrape-standings:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
@@ -45,7 +44,7 @@ jobs:
           fi
 
       - name: Create Directories
-        run: mkdir -p data tmp public/cal
+        run: mkdir -p data
 
       - name: Run Python Scraper and Data Processor
         id: python_script
@@ -69,18 +68,15 @@ jobs:
           SEASON = os.environ.get('SEASON')
           HEADERS = {'User-Agent': 'Mozilla/5.0'}
 
-          def fetch_html(url, file_path_for_debug=None):
+          def fetch_html(url):
               if not url: return None
               try:
                   print(f"Fetching {url}...")
                   response = requests.get(url, headers=HEADERS)
                   response.raise_for_status()
-                  if file_path_for_debug:
-                      with open(file_path_for_debug, 'w', encoding='utf-8') as f: f.write(response.text)
-                  print(f"✅ Successfully fetched {url}")
                   return response.text
-              except:
-                  print(f"❌ Error fetching {url}")
+              except Exception as e:
+                  print(f"❌ Error fetching {url}: {e}")
                   return None
 
           def parse_standings(html_content):
@@ -135,28 +131,29 @@ jobs:
               if not html_content: return {}
               soup = BeautifulSoup(html_content, 'html.parser')
               next_up_map = {}
-              fixture_list_items = soup.find_all('li', class_=lambda c: c and 'gs-o-list-ui__item--flush' in c)
-              for item in fixture_list_items:
+              all_fixtures = soup.find_all('li', attrs={'data-tipo-topic-id': True})
+              for fixture in all_fixtures:
                   try:
-                      home_team_span = item.find('span', {'data-testid': 'home-team-name'})
-                      away_team_span = item.find('span', {'data-testid': 'away-team-name'})
-                      if home_team_span and away_team_span:
-                          home_team = home_team_span.get_text(strip=True)
-                          away_team = away_team_span.get_text(strip=True)
-                          if home_team and home_team not in next_up_map:
-                              next_up_map[home_team] = f"{away_team} (H)"
-                          if away_team and away_team not in next_up_map:
-                              next_up_map[away_team] = f"{home_team} (A)"
+                      home_team_div = fixture.select_one('div[class*="TeamHome"]')
+                      away_team_div = fixture.select_one('div[class*="TeamAway"]')
+                      if home_team_div and away_team_div:
+                          home_team_span = home_team_div.find('span', class_='visually-hidden')
+                          away_team_span = away_team_div.find('span', class_='visually-hidden')
+                          if home_team_span and away_team_span:
+                              home_team = home_team_span.get_text(strip=True)
+                              away_team = away_team_span.get_text(strip=True)
+                              if home_team and home_team not in next_up_map:
+                                  next_up_map[home_team] = f"{away_team} (H)"
+                              if away_team and away_team not in next_up_map:
+                                  next_up_map[away_team] = f"{home_team} (A)"
                   except AttributeError:
                       continue
               print(f"✅ Parsed {len(next_up_map)} upcoming fixture entries.")
               return next_up_map
 
           def main():
-              standings_html = fetch_html(LEAGUE_URL, 'tmp/bbc-standings.html')
-              fixtures_html = fetch_html(FIXTURES_URL, 'tmp/bbc-fixtures.html')
-              standings = parse_standings(standings_html)
-              fixtures_map = parse_fixtures(fixtures_html)
+              standings = parse_standings(fetch_html(LEAGUE_URL))
+              fixtures_map = parse_fixtures(fetch_html(FIXTURES_URL))
               for team in standings:
                   if team['team']['name'] in fixtures_map:
                       team['nextUp'] = fixtures_map[team['team']['name']]
@@ -165,31 +162,13 @@ jobs:
                   json.dump(final_json, f, indent=4)
               print("🚀 Scrape complete.")
 
-          if __name__ == "__main__":
-              main()
-
-      - name: 💾 Upload Table Debug Artifact
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: bbc-table-html-output
-          path: tmp/bbc-standings.html
-
-      - name: 💾 Upload Fixtures Debug Artifact
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: bbc-fixtures-html-output
-          path: tmp/bbc-fixtures.html
+          if __name__ == "__main__": main()
 
       - name: Commit and Push Standings
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add data/standings.json
-          if [ -f "public/cal/fixtures.html" ]; then
-            git add public/cal/fixtures.html
-          fi
           if git diff --staged --quiet; then
             echo "🟢 No changes to standings."
           else
