--- a/.github/workflows/update-BBC-data.yml
+++ b/.github/workflows/update-BBC-data.yml
@@ -1,9 +1,11 @@
-name: Update Standings from BBC Sport
+name: Update data
 
 on:
   schedule:
-    # Runs every 5 minutes on match days (adjust hours/days as needed)
+    # Runs every 5 minutes on weekend match days (12:00-23:00)
     - cron: '*/5 12-23 * * SAT,SUN'
+    # Runs every 5 minutes on weeknight match days (19:00-23:00)
+    - cron: '*/5 19-23 * * MON-FRI'
     # Also runs once late at night to catch up
     - cron: '0 2 * * *'
   workflow_dispatch:
