--- a/config.env
+++ b/config.env
@@ -12,8 +12,8 @@ LEAGUE_NAME="League One"
 # 4. CURRENT_SEASON: The current season year (used for generating fixture URLs/ICS files)
 CURRENT_SEASON="2025/2026"
 
-# API-FOOTBALL league ID (prem=39, champ=40, league1=41, league2=42 https://dashboard.api-football.com/)
-API_LEAGUE_ID="41"
+# 5. EFL_FIXTURES_URL: Add this new line for the EFL fixtures
+EFL_FIXTURES_URL="https://www.efl.com/competitions/efl-league-one/fixtures/"
 
 # --- Maintenance Notes ---
 # When your team changes league (promotion/relegation) or a new season starts,
