--- a/.github/workflows/update-BBC-data.yml
+++ b/.github/workflows/update-BBC-data.yml
@@ -1,4 +1,4 @@
-name: Update data
+name: Update Standings from BBC Sport
 
 on:
   schedule:
@@ -28,16 +28,18 @@ jobs:
       - name: Install Python Dependencies
         run: pip install beautifulsoup4 requests
 
-      - name: Load Configuration Variables and Build URLs
+      - name: Load Configuration Variables
         id: load_config
         run: |
           if [[ -f "./config.env" ]]; then
             source ./config.env
+            # Build BBC Table URL
             LEAGUE_URL="https://www.bbc.co.uk/sport/football/${LEAGUE_SLUG}/table"
-            FIXTURES_URL="https://www.bbc.co.uk/sport/football/${LEAGUE_SLUG}/scores-fixtures"
+            
+            # Pass all variables to the environment
             echo "TEAM_NAME=${TEAM_SLUG}" >> $GITHUB_ENV
             echo "LEAGUE_URL=${LEAGUE_URL}" >> $GITHUB_ENV
-            echo "FIXTURES_URL=${FIXTURES_URL}" >> $GITHUB_ENV
+            echo "EFL_FIXTURES_URL=${EFL_FIXTURES_URL}" >> $GITHUB_ENV # Read new EFL URL
             echo "LEAGUE_ID_NAME=${LEAGUE_NAME}" >> $GITHUB_ENV
             echo "SEASON=${CURRENT_SEASON}" >> $GITHUB_ENV
           else
@@ -53,7 +55,7 @@ jobs:
         env:
           TEAM_NAME: ${{ env.TEAM_NAME }}
           LEAGUE_URL: ${{ env.LEAGUE_URL }}
-          FIXTURES_URL: ${{ env.FIXTURES_URL }}
+          EFL_FIXTURES_URL: ${{ env.EFL_FIXTURES_URL }}
           LEAGUE_ID_NAME: ${{ env.LEAGUE_ID_NAME }}
           SEASON: ${{ env.SEASON }}
         shell: python
@@ -65,7 +67,7 @@ jobs:
 
           TEAM_NAME = os.environ.get('TEAM_NAME', '').replace('-', ' ')
           LEAGUE_URL = os.environ.get('LEAGUE_URL')
-          FIXTURES_URL = os.environ.get('FIXTURES_URL')
+          FIXTURES_URL = os.environ.get('EFL_FIXTURES_URL') # Use the new EFL URL
           LEAGUE_ID_NAME = os.environ.get('LEAGUE_ID_NAME')
           SEASON = os.environ.get('SEASON')
           HEADERS = {'User-Agent': 'Mozilla/5.0'}
@@ -82,6 +84,7 @@ jobs:
                   return None
 
           def parse_standings(html_content):
+              # This function remains the same as it correctly parses the BBC table
               if not html_content: return []
               soup = BeautifulSoup(html_content, 'html.parser')
               table = soup.find('table', {'data-testid': 'football-table'})
@@ -102,14 +105,8 @@ jobs:
                       team_name = team_name_span.get_text(strip=True) if team_name_span else "Unknown"
                       logo_img = cells[0].find('img', class_=lambda c: c and 'BadgeImage' in c)
                       logo_url = logo_img['src'] if logo_img else ''
-                      played = int(cells[1].get_text(strip=True))
-                      won = int(cells[2].get_text(strip=True))
-                      drawn = int(cells[3].get_text(strip=True))
-                      lost = int(cells[4].get_text(strip=True))
-                      goals_for = int(cells[5].get_text(strip=True))
-                      goals_against = int(cells[6].get_text(strip=True))
-                      goal_diff = int(cells[7].get_text(strip=True))
-                      points = int(cells[8].get_text(strip=True))
+                      played, won, drawn, lost = map(int, [c.get_text(strip=True) for c in cells[1:5]])
+                      goals_for, goals_against, goal_diff, points = map(int, [c.get_text(strip=True) for c in cells[5:9]])
                       form_cell = cells[9]
                       form_letters = [div.get_text(strip=True) for div in form_cell.find_all('div', {'data-testid': 'letter-content'})]
                       form_string = "".join(form_letters)
@@ -126,39 +123,47 @@ jobs:
                   except Exception as e:
                       print(f"⚠️ Skipping row due to parsing error: {e}")
                       continue
-              print(f"✅ Parsed {len(standings_data)} teams.")
+              print(f"✅ Parsed {len(standings_data)} teams from BBC table.")
               return standings_data
 
           def parse_fixtures(html_content):
+              # --- THIS FUNCTION IS COMPLETELY REWRITTEN FOR EFL.COM ---
               if not html_content: return {}
               soup = BeautifulSoup(html_content, 'html.parser')
               next_up_map = {}
-              all_fixtures = soup.find_all('li', attrs={'data-tipo-topic-id': True})
+              
+              # Find all fixture blocks using their specific class
+              all_fixtures = soup.find_all('div', class_='match-item')
+
               for fixture in all_fixtures:
                   try:
-                      home_team_div = fixture.select_one('div[class*="TeamHome"]')
-                      away_team_div = fixture.select_one('div[class*="TeamAway"]')
-                      if home_team_div and away_team_div:
-                          home_team_span = home_team_div.find('span', class_='visually-hidden')
-                          away_team_span = away_team_div.find('span', class_='visually-hidden')
-                          if home_team_span and away_team_span:
-                              home_team = home_team_span.get_text(strip=True)
-                              away_team = away_team_span.get_text(strip=True)
-                              if home_team and home_team not in next_up_map:
-                                  next_up_map[home_team] = f"{away_team} (H)"
-                              if away_team and away_team not in next_up_map:
-                                  next_up_map[away_team] = f"{home_team} (A)"
+                      # Fixtures that are already played have a score, future ones don't
+                      score = fixture.find('div', class_='match-item__score')
+                      if score:
+                          continue # Skip this match, it's already happened
+
+                      home_team_name = fixture.find('div', class_='match-item__team--home').find('p').get_text(strip=True)
+                      away_team_name = fixture.find('div', class_='match-item__team--away').find('p').get_text(strip=True)
+
+                      if home_team_name and home_team_name not in next_up_map:
+                          next_up_map[home_team_name] = f"{away_team_name} (H)"
+                      if away_team_name and away_team_name not in next_up_map:
+                          next_up_map[away_team_name] = f"{away_team_name} (A)"
                   except AttributeError:
                       continue
-              print(f"✅ Parsed {len(next_up_map)} upcoming fixture entries.")
+                          
+              print(f"✅ Parsed {len(next_up_map)} upcoming fixture entries from EFL.com.")
               return next_up_map
 
           def main():
               standings = parse_standings(fetch_html(LEAGUE_URL))
-              fixtures_map = parse_fixtures(fetch_html(FIXTURES_URL))
+              fixtures_map = parse_fixtures(fetch_html(FIXTURES_URL)) # Now fetches from EFL.com
+              
               for team in standings:
+                  # Team names from BBC (e.g. "Huddersfield Town") must match EFL.com names
                   if team['team']['name'] in fixtures_map:
                       team['nextUp'] = fixtures_map[team['team']['name']]
+              
               final_json = {'response': [{'league': {'name': LEAGUE_ID_NAME, 'season': SEASON, 'standings': [standings]}}]}
               with open('data/standings.json', 'w', encoding='utf-8') as f:
                   json.dump(final_json, f, indent=4)
